@@ -1,3 +1,8 @@
+2011-06-07  Don Porter  <dgp@users.sourceforge.net>
+
+	* generic/tkEntry.c:	Restore support for values "08" and "09"
+	in a [spinbox] configured to use -from and -to values.  [Bug 2358545].
+
 2011-06-06  Don Porter  <dgp@users.sourceforge.net>
 
 	* generic/tkConsole.c:	Restore proper NUL output to the [console].
